[package]
name = "GameServer"
version = "0.1.0"
authors = ["jamescarterbell@gmail.com <jamescarterbell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
game = {path = "../Game"}
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.48"
serde_derive = "1.0.105"